fix: columns item spacing

--- a/components/card.module.scss
+++ b/components/card.module.scss
@@ -6,7 +6,7 @@
 
 .root {
     @include utils.module-root;
-    @include utils.wrapper-size(0);
+    @include utils.wrapper-size(3rem);
 
     .wrapper {
         .item {
@@ -41,23 +41,25 @@
     }
 
     @include breakpoints.lg-min {
-        &.card_1 {
-            .yImg {
-                .item-wrap {
-                    grid-template-columns: 2fr 1fr;
-                }
-
-                &.right {
+        @container module (min-width:451px) {
+            &.card_1 {
+                .yImg {
                     .item-wrap {
-                        grid-template-columns: 1fr 2fr;
+                        grid-template-columns: 2fr 1fr;
+                    }
+
+                    &.right {
+                        .item-wrap {
+                            grid-template-columns: 1fr 2fr;
+                        }
                     }
                 }
             }
-        }
-        &.card_2 {
-            .yImg {
-                .item-wrap {
-                    grid-template-columns: 1fr 1fr;
+            &.card_2 {
+                .yImg {
+                    .item-wrap {
+                        grid-template-columns: 1fr 1fr;
+                    }
                 }
             }
         }
@@ -76,13 +78,13 @@
         }
     }
 
-    @container item (min-width:343px) {
+    /* @container item (min-width:343px) {
         .item {
             &.nHero:first-of-type {
                 margin-top: 2rem;
             }
         }
-    }
+    } */
 
     //for larger screens (starts at 1025)
     /*    @container item (min-width:775px) {
@@ -122,9 +124,9 @@
     }
 
     @container module (min-width:481px) {
-        .item:first-of-type {
+        /* .item:first-of-type {
             margin-top: 2rem;
-        }
+        } */
 
         .nHero {
             width: variables.$ten-12;
@@ -164,16 +166,12 @@
         @include utils.grid;
     }
 
-    /*  &.feature-column,
-    &.single-column {
-        &.article_1,
-        &.article_2,
-        &.article_3 {
-            &.col_1 .nHero.item {
-                width: variables.$ten-12;
-                margin-left: auto;
-                margin-right: auto;
-            }
+    /*      &.feature-column, */
+    /* &.single-column {
+        .nHero.item {
+            width: variables.$ten-12;
+            margin-left: auto;
+            margin-right: auto;
         }
     } */
 }
