--- a/elements/headlineblock.module.scss
+++ b/elements/headlineblock.module.scss
@@ -193,7 +193,16 @@
         }
 
         .hd {
-            @include med-text-group;
+            font-size: 1.0625em;
+            margin-top: 0.7058823529em;
+            margin-bottom: 0.4705882353em;
+            line-height: 1.1764705882em;
+        }
+
+        @container item (min-width: 451px) {
+            .hd {
+                @include med-text-group;
+            }
         }
 
         .sh {
@@ -222,32 +231,55 @@
     }
 
     &.parallax {
-        font-size: 70%;
+        font-size: 100%; //70%
 
-        @include breakpoints.md-min {
+        /*         @include breakpoints.md-min {
             font-size: 80%;
         }
 
         @include breakpoints.lg-min {
-            font-size: 100%;
-        }
+        } */
 
         margin-top: 0.75em;
 
         .hd {
+            font-size: variables.$sm-txt;
+            margin-top: 0.7058823529em;
+            margin-bottom: 0.4705882353em;
+            line-height: 1.1764705882em;
             font-weight: normal;
-            font-size: 3em;
-            margin-top: 0;
-            margin-bottom: 0.3333333333em;
-            line-height: 1.0833333333em;
-            letter-spacing: -0.04rem;
         }
 
         .sh {
-            @include med-text-group;
+            font-size: variables.$xs-txt;
+            margin-top: 0.5714285714em;
+            margin-bottom: 0.5714285714em;
+            line-height: 1.1428571429em;
         }
 
-        @include breakpoints.lg-min {
+        @container module (min-width: 451px) {
+            font-size: 80%;
+
+            .sh {
+                @include med-text-group;
+            }
+
+            .hd {
+                font-size: 3em;
+                margin-top: 0;
+                margin-bottom: 0.3333333333em;
+                line-height: 1.0833333333em;
+                letter-spacing: -0.04rem;
+            }
+        }
+
+        @container module (min-width:852px) {
+            font-size: 80%;
+        }
+
+        @container item (min-width: 1025px) {
+            font-size: 100%;
+
             .hd {
                 font-size: variables.$xl-txt;
                 margin-bottom: 0.3703703704em;
