--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -97,8 +97,13 @@
     padding-right: 0;
     padding-top: 0;
 
-    .item {
+    /* .item {
         width: 100%;
+    } */
+    .item {
+        margin-left: 3.1830914184%;
+        margin-right: 3.1830914184%;
+        width: 93.6338171632%;
     }
 }
 
